src/parse.c
/* A recursive-descent parser generated by peg 0.1.19 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 44
#line 10 "parse.peg"

#if HAVE_CONFIG_H
#   include <config.h>
#endif

#include "net.h"
#include "types.h"
#include "rinetd.h"
#include "parse.h"

#define YY_CTX_LOCAL 1
#define YY_CTX_MEMBERS \
    FILE *fp; \
    int currentLine; \
    int isAuthAllow; \
    char *tmpPort, *bindPort, *connectPort; \
    int tmpProto, bindProto, connectProto; \
    int serverTimeout; \
    int keepalive; \
    char *bindAddress, *connectAddress, *sourceAddress;
#define YY_INPUT(yyctx, buf, result, max_size) \
{ \
    int yyc = fgetc(yyctx->fp); \
    result = (EOF == yyc) ? 0 : (*(buf) = yyc, 1); \
}
#define PARSE_ERROR exit(1);
#define MEMORY_ERROR { \
        logError("could not allocate memory when parsing configuration.\n"); \
        exit(1); \
    }

#if defined __clang__
#pragma clang diagnostic ignored "-Wunused-parameter"
#pragma clang diagnostic ignored "-Wunused-label"
#elif defined __GNUC__
#pragma GCC diagnostic ignored "-Wunused-parameter"
#pragma GCC diagnostic ignored "-Wunused-label"
#endif


#ifndef YY_MALLOC
#define YY_MALLOC(C, N)		malloc(N)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(C, P, N)	realloc(P, N)
#endif
#ifndef YY_FREE
#define YY_FREE(C, P)		free(P)
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM_R
#define YYPARSEFROM_R	yyparsefrom_r
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YYRELEASE
#define YYRELEASE	yyrelease
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yy->__begin= yy->__pos, 1)
#endif
#ifndef YY_END
#define YY_END		( yy->__end= yy->__pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_BUFFER_SIZE
#define YY_BUFFER_SIZE 1024
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *yy, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *__buf;
  int       __buflen;
  int       __pos;
  int       __limit;
  char     *__text;
  int       __textlen;
  int       __begin;
  int       __end;
  int       __textmax;
  yythunk  *__thunks;
  int       __thunkslen;
  int       __thunkpos;
  YYSTYPE   __;
  YYSTYPE  *__val;
  YYSTYPE  *__vals;
  int       __valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#ifndef YY_INPUT
#define YY_INPUT(yy, buf, result, max_size)		\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext _yyctx= { 0, 0 };
yycontext *yyctx= &_yyctx;
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#endif

YY_LOCAL(int) yyrefill(yycontext *yy)
{
  int yyn;
  while (yy->__buflen - yy->__pos < 512)
    {
      yy->__buflen *= 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, yy->__buflen);
    }
#ifdef YY_CTX_LOCAL
  YY_INPUT(yy, (yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#else
  YY_INPUT((yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#endif
  if (!yyn) return 0;
  yy->__limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *yy)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  ++yy->__pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if ((unsigned char)yy->__buf[yy->__pos] == c)
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (yy->__buf[yy->__pos] != *s)
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= (unsigned char)yy->__buf[yy->__pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *yy, yyaction action, int begin, int end)
{
  while (yy->__thunkpos >= yy->__thunkslen)
    {
      yy->__thunkslen *= 2;
      yy->__thunks= (yythunk *)YY_REALLOC(yy, yy->__thunks, sizeof(yythunk) * yy->__thunkslen);
    }
  yy->__thunks[yy->__thunkpos].begin=  begin;
  yy->__thunks[yy->__thunkpos].end=    end;
  yy->__thunks[yy->__thunkpos].action= action;
  ++yy->__thunkpos;
}

YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yy->__textlen < (yyleng + 1))
	{
	  yy->__textlen *= 2;
	  yy->__text= (char *)YY_REALLOC(yy, yy->__text, yy->__textlen);
	}
      memcpy(yy->__text, yy->__buf + begin, yyleng);
    }
  yy->__text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *yy, int yythunkpos)
{
  int pos;
  for (pos= yythunkpos;  pos < yy->__thunkpos;  ++pos)
    {
      yythunk *thunk= &yy->__thunks[pos];
      int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yy->__text));
      thunk->action(yy, yy->__text, yyleng);
    }
  yy->__thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *yy)
{
  if ((yy->__limit -= yy->__pos))
    {
      memmove(yy->__buf, yy->__buf + yy->__pos, yy->__limit);
    }
  yy->__begin -= yy->__pos;
  yy->__end -= yy->__pos;
  yy->__pos= yy->__thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(yy, 0);
      yyCommit(yy);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *yy, char *text, int count)
{
  yy->__val += count;
  while (yy->__valslen <= yy->__val - yy->__vals)
    {
      long offset= yy->__val - yy->__vals;
      yy->__valslen *= 2;
      yy->__vals= (YYSTYPE *)YY_REALLOC(yy, yy->__vals, sizeof(YYSTYPE) * yy->__valslen);
      yy->__val= yy->__vals + offset;
    }
}
YY_LOCAL(void) yyPop(yycontext *yy, char *text, int count)   { yy->__val -= count; }
YY_LOCAL(void) yySet(yycontext *yy, char *text, int count)   { yy->__val[count]= yy->__; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yy, yythunkpos0)

YY_RULE(int) yy_eof(yycontext *yy); /* 44 */
YY_RULE(int) yy_id(yycontext *yy); /* 43 */
YY_RULE(int) yy_label(yycontext *yy); /* 42 */
YY_RULE(int) yy_bare_ipv6(yycontext *yy); /* 41 */
YY_RULE(int) yy_digit(yycontext *yy); /* 40 */
YY_RULE(int) yy_hexdigit(yycontext *yy); /* 39 */
YY_RULE(int) yy_hostname(yycontext *yy); /* 38 */
YY_RULE(int) yy_ipv6(yycontext *yy); /* 37 */
YY_RULE(int) yy_ipv4(yycontext *yy); /* 36 */
YY_RULE(int) yy_name(yycontext *yy); /* 35 */
YY_RULE(int) yy_filename(yycontext *yy); /* 34 */
YY_RULE(int) yy_pattern(yycontext *yy); /* 33 */
YY_RULE(int) yy_auth_key(yycontext *yy); /* 32 */
YY_RULE(int) yy_service(yycontext *yy); /* 31 */
YY_RULE(int) yy_proto(yycontext *yy); /* 30 */
YY_RULE(int) yy_port(yycontext *yy); /* 29 */
YY_RULE(int) yy_keepalive_value(yycontext *yy); /* 28 */
YY_RULE(int) yy_number(yycontext *yy); /* 27 */
YY_RULE(int) yy_option_keepalive(yycontext *yy); /* 26 */
YY_RULE(int) yy_option_source(yycontext *yy); /* 25 */
YY_RULE(int) yy_option_timeout(yycontext *yy); /* 24 */
YY_RULE(int) yy_option(yycontext *yy); /* 23 */
YY_RULE(int) yy_option_list(yycontext *yy); /* 22 */
YY_RULE(int) yy_full_port(yycontext *yy); /* 21 */
YY_RULE(int) yy_address(yycontext *yy); /* 20 */
YY_RULE(int) yy_server_options(yycontext *yy); /* 19 */
YY_RULE(int) yy_connect_port(yycontext *yy); /* 18 */
YY_RULE(int) yy_connect_address(yycontext *yy); /* 17 */
YY_RULE(int) yy_bind_port(yycontext *yy); /* 16 */
YY_RULE(int) yy_bind_address(yycontext *yy); /* 15 */
YY_RULE(int) yy_buffersize(yycontext *yy); /* 14 */
YY_RULE(int) yy_logcommon(yycontext *yy); /* 13 */
YY_RULE(int) yy_pidfile(yycontext *yy); /* 12 */
YY_RULE(int) yy_logfile(yycontext *yy); /* 11 */
YY_RULE(int) yy_auth_rule(yycontext *yy); /* 10 */
YY_RULE(int) yy_server_rule(yycontext *yy); /* 9 */
YY_RULE(int) yy_comment(yycontext *yy); /* 8 */
YY_RULE(int) yy_command(yycontext *yy); /* 7 */
YY_RULE(int) yy__(yycontext *yy); /* 6 */
YY_RULE(int) yy_invalid_syntax(yycontext *yy); /* 5 */
YY_RULE(int) yy_eol(yycontext *yy); /* 4 */
YY_RULE(int) yy_line(yycontext *yy); /* 3 */
YY_RULE(int) yy_sol(yycontext *yy); /* 2 */
YY_RULE(int) yy_file(yycontext *yy); /* 1 */

YY_ACTION(void) yy_1_sol(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_sol\n"));
  {
#line 181
   ++yy->currentLine; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_invalid_syntax(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_invalid_syntax\n"));
  {
#line 155
  
    logError("invalid syntax at line %d: %s\n",
            yy->currentLine, yytext);
    PARSE_ERROR; /* FIXME */
;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_buffersize(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_buffersize\n"));
  {
#line 145
  
    bufferSize = atoi(yytext);
    if (bufferSize < 1024 || bufferSize > 1048576) {
        logError("invalid buffer size %d at line %d (must be 1024-1048576)\n",
                 bufferSize, yy->currentLine);
        PARSE_ERROR;
    }
;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_logcommon(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_logcommon\n"));
  {
#line 140
  
    logFormatCommon = 1;
;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_pidfile(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_pidfile\n"));
  {
#line 132
  
    pidLogFileName = strdup(yytext);
    if (!pidLogFileName) {
        MEMORY_ERROR;
    }
;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_logfile(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_logfile\n"));
  {
#line 124
  
    logFileName = strdup(yytext);
    if (!logFileName) {
        MEMORY_ERROR;
    }
;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_auth_key(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_auth_key\n"));
  {
#line 121
   yy->isAuthAllow = (yytext[0] == 'a'); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_auth_rule(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_auth_rule\n"));
  {
#line 99
  
    allRules = (Rule *)
        realloc(allRules, sizeof(Rule) * (allRulesCount + 1));
    if (!allRules) {
        MEMORY_ERROR;
    }
    allRules[allRulesCount].pattern = strdup(yytext);
    if (!allRules[allRulesCount].pattern) {
        MEMORY_ERROR;
    }
    allRules[allRulesCount].type = yy->isAuthAllow ? allowRule : denyRule;
    if (seTotal > 0) {
        if (seInfo[seTotal - 1].rulesStart == 0 && seInfo[seTotal - 1].rulesCount == 0) {
            seInfo[seTotal - 1].rulesStart = allRulesCount;
        }
        ++seInfo[seTotal - 1].rulesCount;
    } else {
        ++globalRulesCount;
    }
    ++allRulesCount;
;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_3_proto(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_3_proto\n"));
  {
#line 96
   yy->tmpProto = IPPROTO_TCP; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_proto(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_proto\n"));
  {
#line 95
   yy->tmpProto = IPPROTO_UDP; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_proto(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_proto\n"));
  {
#line 94
   yy->tmpProto = IPPROTO_TCP; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_port(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_port\n"));
  {
#line 93
   yy->tmpPort = strdup(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_option_keepalive(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_option_keepalive\n"));
  {
#line 87
   yy->keepalive = (yytext[1] == 'n') ? 1 : 0; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_option_source(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_option_source\n"));
  {
#line 86
   yy->sourceAddress = strdup(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_option_timeout(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_option_timeout\n"));
  {
#line 85
   yy->serverTimeout = atoi(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_connect_port(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_connect_port\n"));
  {
#line 80
   yy->connectPort = yy->tmpPort; yy->connectProto = yy->tmpProto; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_bind_port(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_bind_port\n"));
  {
#line 79
   yy->bindPort = yy->tmpPort; yy->bindProto = yy->tmpProto; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_connect_address(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_connect_address\n"));
  {
#line 78
   yy->connectAddress = strdup(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_bind_address(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_bind_address\n"));
  {
#line 77
   yy->bindAddress = strdup(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_server_rule(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_server_rule\n"));
  {
#line 57
  
    /* keepalive: -1 = not set (default to on), 0 = off, 1 = on */
    int keepalive = (yy->keepalive == -1) ? 1 : yy->keepalive;

    addServer(yy->bindAddress, yy->bindPort, yy->bindProto,
        yy->connectAddress, yy->connectPort, yy->connectProto,
        yy->serverTimeout > 0 ? yy->serverTimeout : RINETD_DEFAULT_UDP_TIMEOUT,
        yy->sourceAddress,
        keepalive);
    free(yy->bindAddress);
    free(yy->connectAddress);
    free(yy->sourceAddress);
    yy->bindAddress = yy->connectAddress = yy->sourceAddress = NULL;
    free(yy->bindPort);
    free(yy->connectPort);
    yy->bindPort = yy->connectPort = NULL;
    yy->serverTimeout = 0;
    yy->keepalive = -1;
;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
